# jvmti2

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
docs/plans/: 2026-03-09-examples-design.md  2026-03-09-examples-impl.md
examples/jvmti-android-recon/: Cargo.toml
examples/jvmti-android-recon/src/: lib.rs  main.rs
examples/jvmti-class-watcher/: Cargo.toml
examples/jvmti-class-watcher/src/: lib.rs  main.rs
examples/jvmti-field-guard/: Cargo.toml
examples/jvmti-field-guard/src/: lib.rs  main.rs
examples/jvmti-native-spy/: Cargo.toml
examples/jvmti-native-spy/src/: lib.rs  main.rs
examples/jvmti-tracing/: Cargo.toml
examples/jvmti-tracing/src/: lib.rs  main.rs
src/: agent.rs  capabilities.rs  enums.rs  errors.rs  event.rs  flags.rs  lib.rs  macros.rs  memory.rs  monitor.rs  objects.rs  version.rs
src/env/: breakpoint.rs  capability.rs  class.rs  class_loader.rs  event.rs  field.rs  force_return.rs  heap.rs  local_var.rs  method.rs  mod.rs  module.rs  object.rs  raw_monitor.rs  stack.rs  system.rs  thread.rs
